src/tests/cases/snapshots/ui__multiple_processes_with_multiple_connections.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total Up / Down: 0Bps / 0Bps                                                                                                                                                                 
┌Utilization by process name──────────────────────────────────────────────────────────────────┐┌Utilization by remote address────────────────────────────────────────────────────────────────┐
│Process                     Connections                 Up / Down                            ││Remote Address                          Connections           Up / Down                      │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
└─────────────────────────────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘
┌Utilization by connection───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Connection                                                                                                            Process                       Up / Down                               │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Press <SPACE> to pause (DNS queries hidden).                                                                                                                                                 

